Fixed brewery image alignment

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -49,6 +49,7 @@ h1 h2 h3 h4 h5 h6 {
         grid-column: 1;
         grid-row: 1 / 3;
         text-align: center;
+        align-self: center;
     }
     .brewery-info {
         grid-column: 2;
